--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="1"
-    android:rowCount="2"
+    android:rowCount="3"
     tools:context=".MainActivity">
 
     <EditText
@@ -14,11 +14,31 @@
         android:layout_row="0"
         android:layout_rowWeight="1"
         android:layout_column="0"
+        android:autofillHints=""
         android:background="@color/white"
         android:gravity="end|bottom"
-        android:padding="20dp"
+        android:inputType="none"
+        android:paddingHorizontal="20dp"
         android:text=""
+        android:maxLength="50"
         android:textColor="@color/black"
+        android:textSize="60sp"
+        tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+
+    <TextView
+        android:id="@+id/tvResult"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:background="@color/white"
+        android:paddingHorizontal="15dp"
+        android:gravity="end|center_vertical"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="center_vertical"
+        android:text=""
+        android:maxLength="15"
+        android:textColor="@color/blue"
         android:textSize="45sp"
         android:autofillHints=""
         android:inputType="none"
@@ -29,7 +49,7 @@
         layout="@layout/layout_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_column="0" />
 
 </GridLayout>
